--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"> 
   <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,600;1,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+
 </head>
 
 <script>
@@ -31,7 +34,7 @@
   <!-- HEADER -->
   <header>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
-      <a class="navbar-brand" href="#">Angel rose nails</a>
+      <a class="navbar-brand mx-auto" href="#inicio">Angel rose nails</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -52,82 +55,160 @@
     <!-- INICIO -->
     <section id="inicio" class="hero">
     <div class="hero-content">
-      <h1></h1>
-      <p></p>
       <a href="https://wa.me/573125458407?text=Hola%20quiero%20agendar%20una%20cita%20💅"
       target="_blank"
-      class="btn btn-danger"
-      >
+      class="btn btn-agendar">
       Agenda tu cita
-      </a>
+    </a>
       </div>
     </section>
 
     <!-- SERVICIOS -->
 
     <section id="servicios" class="container my-5">
-      <h2 class="text-center section-title">Nuestros Servicios</h2>
-      <div class="row">
+      <h2 class="section-title">Nuestros Servicios</h2>
+      <div class="row justify-content-center g-4">
 
-        <div class="col-md-3 mb-3">
+        <div class="col-md-3 col-sm-6">
           <div class="card h-100">
             <div class="card-body text-center">
 
               <div class="heart-img">
-          <img src="img/manicure-tradicional.jpeg" alt="Manicure Tradicional">
-        </div>
+                <svg viewBox="0 0 32 29.6" class="heart-svg">
+    <defs>
+      <clipPath id="heartClip">
+        <path d="M23.6,0c-3.4,0-6.4,2.7-7.6,5.6C14.8,2.7,11.8,0,8.4,0
+        C3.8,0,0,3.8,0,8.4c0,9.4,16,21.2,16,21.2s16-11.8,16-21.2
+        C32,3.8,28.2,0,23.6,0z"/>
+      </clipPath>
+    </defs>
+
+    <image 
+      href="img/manicure-tradicional.jpeg"
+      width="32"
+      height="29.6"
+      clip-path="url(#heartClip)"
+      preserveAspectRatio="xMidYMid slice"
+    />
+  </svg>
+</div>
               <h5 class="card-title">Manicure Tradicional</h5>
               <p class="card-text">Cuidado básico y elegante para tus uñas.</p>
             </div>
           </div>
         </div>
 
-        <div class="col-md-3 mb-3">
+        <div class="col-md-3 col-sm-6">
           <div class="card h-100">
             <div class="card-body text-center">
 
               <div class="heart-img">
-          <img src="img/semipermanente.jpeg" alt="Mnicure Semipermanente">
-        </div>
+                <svg viewBox="0 0 32 29.6" class="heart-svg">
+    <defs>
+      <clipPath id="heartClip">
+        <path d="M23.6,0c-3.4,0-6.4,2.7-7.6,5.6C14.8,2.7,11.8,0,8.4,0
+        C3.8,0,0,3.8,0,8.4c0,9.4,16,21.2,16,21.2s16-11.8,16-21.2
+        C32,3.8,28.2,0,23.6,0z"/>
+      </clipPath>
+    </defs>
+
+    <image 
+      href="img/semipermanente.jpeg"
+      width="32"
+      height="29.6"
+      clip-path="url(#heartClip)"
+      preserveAspectRatio="xMidYMid slice"
+    />
+  </svg>
+</div>
+
               <h5 class="card-title">Manicure Semipermanente</h5>
               <p class="card-text">Color duradero y acabado perfecto.</p>
             </div>
           </div>
         </div>
 
-        <div class="col-md-3 mb-3">
+        <div class="col-md-3 col-sm-6">
           <div class="card h-100">
             <div class="card-body text-center">
 
                <div class="heart-img">
-          <img src="img/pedicureaspa.jpeg" alt="Pedicure Spa">
-        </div>
+                <svg viewBox="0 0 32 29.6" class="heart-svg">
+    <defs>
+      <clipPath id="heartClip">
+        <path d="M23.6,0c-3.4,0-6.4,2.7-7.6,5.6C14.8,2.7,11.8,0,8.4,0
+        C3.8,0,0,3.8,0,8.4c0,9.4,16,21.2,16,21.2s16-11.8,16-21.2
+        C32,3.8,28.2,0,23.6,0z"/>
+      </clipPath>
+    </defs>
+
+    <image 
+      href="img/pedicureaspa.jpeg"
+      width="32"
+      height="29.6"
+      clip-path="url(#heartClip)"
+      preserveAspectRatio="xMidYMid slice"
+    />
+  </svg>
+</div>
               <h5 class="card-title">Pedicure Spa</h5>
               <p class="card-text">Relajación y cuidado profundo.</p>
             </div>
           </div>
         </div>
 
-        <div class="col-md-3 mb-3">
+        <div class="col-md-3 col-sm-6">
           <div class="card h-100">
             <div class="card-body text-center">
 
               <div class="heart-img">
-          <img src="img/diseño de uñas.jpeg" alt="Diseño de Uñas">
-        </div>
+                <svg viewBox="0 0 32 29.6" class="heart-svg">
+    <defs>
+      <clipPath id="heartClip">
+        <path d="M23.6,0c-3.4,0-6.4,2.7-7.6,5.6C14.8,2.7,11.8,0,8.4,0
+        C3.8,0,0,3.8,0,8.4c0,9.4,16,21.2,16,21.2s16-11.8,16-21.2
+        C32,3.8,28.2,0,23.6,0z"/>
+      </clipPath>
+    </defs>
+
+    <image 
+      href="img/diseño de uñas.jpeg"
+      width="32"
+      height="29.6"
+      clip-path="url(#heartClip)"
+      preserveAspectRatio="xMidYMid slice"
+    />
+  </svg>
+</div>
               <h5 class="card-title">Diseño de Uñas</h5>
               <p class="card-text">Diseños personalizados a tu estilo.</p>
             </div>
           </div>
         </div>
 
-      <div class="col-md-3 mb-3">
+      <div class="col-md-3 col-sm-6">
           <div class="card h-100">
             <div class="card-body text-center">
 
               <div class="heart-img">
-          <img src="img/uñas acrilicas.jpeg" alt="Uñas Acrilicas">
-        </div>
+                <svg viewBox="0 0 32 29.6" class="heart-svg">
+    <defs>
+      <clipPath id="heartClip">
+        <path d="M23.6,0c-3.4,0-6.4,2.7-7.6,5.6C14.8,2.7,11.8,0,8.4,0
+        C3.8,0,0,3.8,0,8.4c0,9.4,16,21.2,16,21.2s16-11.8,16-21.2
+        C32,3.8,28.2,0,23.6,0z"/>
+      </clipPath>
+    </defs>
+
+    <image 
+      href="img/uñas acrilicas.jpeg"
+      width="32"
+      height="29.6"
+      clip-path="url(#heartClip)"
+      preserveAspectRatio="xMidYMid slice"
+    />
+  </svg>
+</div>
               <h5 class="card-title">Uñas Acrilicas</h5>
               <p class="card-text">Sistema de esculpido.</p>
             </div>
@@ -148,7 +229,7 @@
     <!-- CONTACTO -->
 
     <section id="contacto" class="container my-5">
-      <h2 class="text-center mb-4">Contacto</h2>
+      <h2 class="text-center section-title">Contacto</h2>
       
     <div class="row text-center align-items-center"> 
 
@@ -203,3 +284,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
