--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
 </div>
               <h5 class="card-title">Manicure Tradicional</h5>
               <p class="card-text">Cuidado básico y elegante para tus uñas.</p>
+              <button class="btn-vermas" data-bs-toggle="modal" data-bs-target="#modalManicure">
+              Ver más
+              </button>
             </div>
           </div>
         </div>
@@ -124,6 +127,9 @@
 
               <h5 class="card-title">Manicure Semipermanente</h5>
               <p class="card-text">Color duradero y acabado perfecto.</p>
+              <button class="btn-vermas" data-bs-toggle="modal" data-bs-target="#modalSemi">
+              Ver más
+              </button>
             </div>
           </div>
         </div>
@@ -153,6 +159,8 @@
 </div>
               <h5 class="card-title">Pedicure Spa</h5>
               <p class="card-text">Relajación y cuidado profundo.</p>
+              <button class="btn-vermas" data-bs-toggle="modal" data-bs-target="#modalPedicure">
+              Ver más
             </div>
           </div>
         </div>
@@ -182,6 +190,8 @@
 </div>
               <h5 class="card-title">Diseño de Uñas</h5>
               <p class="card-text">Diseños personalizados a tu estilo.</p>
+              <button class="btn-vermas" data-bs-toggle="modal" data-bs-target="#modalDiseño">
+              Ver más
             </div>
           </div>
         </div>
@@ -211,6 +221,8 @@
 </div>
               <h5 class="card-title">Uñas Acrilicas</h5>
               <p class="card-text">Sistema de esculpido.</p>
+              <button class="btn-vermas" data-bs-toggle="modal" data-bs-target="#modalUñas">
+              Ver más
             </div>
           </div>
         </div>
@@ -280,9 +292,41 @@
     <p>© 2026 Spa de Manicure - Todos los derechos reservados</p>
   </footer>
 
+  <!-- Modal Manicure Tradicional -->
+   
+<div class="modal fade" id="modalManicure" tabindex="-1">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content">
+      
+      <div class="modal-header">
+        <h5 class="modal-title">Manicure Tradicional</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <div class="modal-body text-center">
+        <div class="row">
+          <div class="col-md-4 mb-3">
+            <img src="img/manicure1.jpg" class="img-fluid rounded">
+          </div>
+          <div class="col-md-4 mb-3">
+            <img src="img/manicure2.jpg" class="img-fluid rounded">
+          </div>
+          <div class="col-md-4 mb-3">
+            <img src="img/manicure3.jpg" class="img-fluid rounded">
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
 
 
